--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,6 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Speedport Info</string>
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="device_name">Device name:</string>
+    <string name="date_time">Date/Time:</string>
+    <string name="dsl_link">DSL/Link:</string>
+    <string name="internet">Internet:</string>
+    <string name="downstream">Downstream:</string>
+    <string name="upstream">Upstream:</string>
+    <string name="wlan_24">WLAN 2.4GHz (SSID):</string>
+    <string name="wlan_5">WLAN 5GHz (SSID):</string>
+    <string name="wps_state">WPS:</string>
+    <string name="wlan_to_go">WLAN TO GO (HotSpot):</string>
+    <string name="firmware_version">Firmware:</string>
+    <string name="serial">Serial number:</string>
+    <string name="button_reconnect">Reconnect</string>
 </resources>
