Added Speedport W724V. Updated UI.

--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -1,12 +1,12 @@
 <resources>
-
     <string name="action_settings">Einstellungen</string>
     <string name="button_reconnect">Neu verbinden</string>
-    <string name="date_time">Datum/Uhrzeit:</string>
-    <string name="device_name">Gerätename:</string>
-    <string name="downstream">Downstream:</string>
-    <string name="dsl_link">DSL-Status:</string>
-    <string name="serial">Seriennummer:</string>
-    <string name="upstream">Upstream:</string>
-
+    <string name="date_time">Datum/Uhrzeit</string>
+    <string name="device_name">Gerätename</string>
+    <string name="dsl_link">DSL-Status</string>
+    <string name="serial">Seriennummer</string>
+    <string name="ssid">Netzwerk</string>
+    <string name="active">aktiv</string>
+    <string name="deactivated">deaktiviert</string>
+    <string name="not_active">nicht aktiv</string>
 </resources>
