Updated W724V to new JSON format. Added refresh button.

--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -9,4 +9,5 @@
     <string name="active">aktiv</string>
     <string name="deactivated">deaktiviert</string>
     <string name="not_active">nicht aktiv</string>
+    <string name="button_refresh">Neu laden</string>
 </resources>
